// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: lambdas > explicit lambda with param annotation 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
    ],
    "term": "λx -> 1",
    "type": "Π(x: String) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > explicit lambda with param annotation 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "id": 2445,
          "type": "Var",
          "variable": {
            "name": "String",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "id": 2446,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "id": 2447,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 62,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 2448,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "id": 66,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > explicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "λx -> 1",
    "type": "Π(x: ?1) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > explicit lambda without annotation 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 813,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "id": 814,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "id": 815,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 21,
          "type": "Neutral",
          "value": {
            "id": 20,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 816,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "id": 25,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > higher order functions > higher order function with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: ?4 -| Γ: x; f = f)",
      "Num ~~ ?2",
    ],
    "term": "λf => f 1",
    "type": "Π(f: ?1) => (closure: ?4 -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > higher order function with implicit param 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 115,
          "type": "Neutral",
          "value": {
            "id": 111,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 1,
        "right": {
          "binder": {
            "annotation": {
              "id": 117,
              "type": "Neutral",
              "value": {
                "id": 116,
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "f",
                  },
                  "nf": {
                    "id": 114,
                    "type": "Neutral",
                    "value": {
                      "id": 113,
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "f",
                    },
                    "source",
                    {
                      "id": 112,
                      "type": "Neutral",
                      "value": {
                        "id": 111,
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "implicits": [],
              "metas": {
                "1": {
                  "ann": {
                    "id": 1,
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
              },
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "id": 4084,
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 4,
              },
            },
            "type": "Closure",
          },
          "id": 119,
          "type": "Abs",
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 120,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 117,
          "type": "Neutral",
          "value": {
            "id": 116,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 118,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 3,
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 4081,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Implicit",
        "type": "Lambda",
        "variable": "f",
      },
      "body": {
        "arg": {
          "id": 4085,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "func": {
          "id": 4082,
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "icit": "Explicit",
        "id": 4086,
        "type": "App",
      },
      "id": 4087,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 112,
          "type": "Neutral",
          "value": {
            "id": 111,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "f",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 4088,
          "type": "Var",
          "variable": {
            "lvl": 2,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "Closure",
      },
      "id": 124,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > higher order functions > simple higher order function 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: ?4 -| Γ: x; f = f)",
      "Num ~~ ?2",
    ],
    "term": "λf -> f 1",
    "type": "Π(f: ?1) -> (closure: ?4 -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > simple higher order function 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 86,
          "type": "Neutral",
          "value": {
            "id": 82,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 1,
        "right": {
          "binder": {
            "annotation": {
              "id": 88,
              "type": "Neutral",
              "value": {
                "id": 87,
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "f",
                  },
                  "nf": {
                    "id": 85,
                    "type": "Neutral",
                    "value": {
                      "id": 84,
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "f",
                    },
                    "source",
                    {
                      "id": 83,
                      "type": "Neutral",
                      "value": {
                        "id": 82,
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "implicits": [],
              "metas": {
                "1": {
                  "ann": {
                    "id": 1,
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
              },
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "id": 3264,
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 4,
              },
            },
            "type": "Closure",
          },
          "id": 90,
          "type": "Abs",
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 91,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 88,
          "type": "Neutral",
          "value": {
            "id": 87,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 89,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 3,
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 3261,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "f",
      },
      "body": {
        "arg": {
          "id": 3265,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "func": {
          "id": 3262,
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "icit": "Explicit",
        "id": 3266,
        "type": "App",
      },
      "id": 3267,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 83,
          "type": "Neutral",
          "value": {
            "id": 82,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "f",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 3268,
          "type": "Var",
          "variable": {
            "lvl": 2,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "Closure",
      },
      "id": 95,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > implicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "λx => 1",
    "type": "Π(x: ?1) => (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > implicit lambda without annotation 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 1629,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Implicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "id": 1630,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "id": 1631,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 42,
          "type": "Neutral",
          "value": {
            "id": 41,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 1632,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "id": 46,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;
